--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start:dev": "npx nodemon",
     "build": "rm -rf ./build && tsc",
     "start": "npm run build && node build/index.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest tests/*.test.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
+    "jest": "^29.3.1",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
