--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "graphql-node",
+  "author": "Jens Pauwels",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/server.js",
   "license": "MIT",
   "scripts": {
     "start:dev": "npx nodemon",
     "build": "rm -rf ./build && tsc",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node build/server.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest tests/*.test.ts"
+    "test": "jest src/tests/*.test.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
