--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rm -rf ./build && tsc",
     "start": "npm run build && node build/server.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest src/tests/*.test.ts"
+    "test": "jest tests/*.test.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
