--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rm -rf ./build && tsc",
     "start": "npm run build && node build/server.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest tests/*.test.ts"
+    "test": "jest tests/*.test.ts",
+    "fix": "xo --fix"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -17,15 +18,21 @@
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": ">=5.57.0",
+    "@typescript-eslint/parser": ">=5.57.0",
+    "eslint": ">=8.0.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.3.1",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": ">=4.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
