--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "jest tests/*.test.ts",
     "fix": "xo --fix"
   },
+  "xo": {
+		"space": true
+	},
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
